--- a/rocky/02-security.yml
+++ b/rocky/02-security.yml
@@ -28,6 +28,7 @@
     # FirewallD
     - name: Allow ports
       firewalld:
+        zone: public
         port: "{{ item }}"
         permanent: yes
         immediate: yes
@@ -41,7 +42,7 @@
     # fail2ban
     - name: Override some basic fail2ban configurations
       template:
-        src: "fail2ban/jail.local.j2"
+        src: "../templates/fail2ban/jail.local.j2"
         dest: /etc/fail2ban/jail.local
         owner: root
         group: root
