--- a/ubuntu/01-setup.yml
+++ b/ubuntu/01-setup.yml
@@ -18,7 +18,7 @@
 
   tasks:
     - name: Enable root on /root/.ssh/authorized_keys file
-      script: ./scripts/root.sh
+      script: ../scripts/root.sh
       args:
         executable: bash
       when: ansible_distribution == 'Ubuntu'
