--- a/rocky/07-kiwiirc.yml
+++ b/rocky/07-kiwiirc.yml
@@ -2,36 +2,25 @@
 - hosts: all
   become: true
   vars:
-    domain_prefix: "chat"
-    domain:        "somdomato.com"
+    domain:  "somdomato.com"
+    webchat: "chat.somdomato.com"
+    passwd:  "{{ lookup('env','PASSWD') | default('hackme', true) }}" 
   
   tasks:
-    - name: "Firewall rule - Allow connections on port: 6667 and 7778"
-      ansible.builtin.iptables:
-        chain: INPUT
-        protocol: tcp
-        destination_ports:
-          - "6667"
-          - "7778"
-        jump: ACCEPT
-
-    - name: Save current state of the firewall in system file
-      community.general.iptables_state:
-        state: saved
-        path: /etc/iptables/rules.v4
-
     - name: Create a 2048-bit SSH key for user kiwiirc in ~kiwiirc/.ssh/id_rsa
       ansible.builtin.user:
         name: kiwiirc
         shell: /bin/bash
         home: /home/kiwiirc
+        password: "{{ passwd | password_hash('sha512') }}"
         generate_ssh_key: yes
         ssh_key_bits: 2048
         ssh_key_file: .ssh/id_rsa
 
     - name: "Install kiwiirc"
-      apt:
-        deb: "https://kiwiirc.com/downloads/kiwiirc_20.05.24.1-1_amd64.deb"
+      dnf:
+        name: 'https://kiwiirc.com/downloads/kiwiirc-20.05.24.1-1.x86_64.rpm'
+        state: present
 
     - name: "Configure /etc/kiwiirc/config.conf file"
       template:
@@ -43,17 +32,17 @@
         src: "kiwiirc/client.json.j2"
         dest: "/etc/kiwiirc/client.json"
 
-    - name: "Configure /etc/nginx/sites-available/80-{{ domain_prefix }}.{{ domain }} file"
+    - name: "Ensure that /etc/nginx/sites.d directory exists"
+      file:
+        path: /etc/nginx/sites.d
+        state: directory
+        mode: '0755'
+
+    - name: "Configure /etc/nginx/sites.d/80-{{ webchat }}.conf file"
       template:
         src: kiwiirc/kiwiirc-nginx.conf.j2
-        dest: "/etc/nginx/sites-available/80-{{ domain_prefix }}.{{ domain }}"
+        dest: "/etc/nginx/sites-available/80-{{ webchat }}.conf"
         force: yes
-
-    - name: Enables sites
-      file:
-        src: "/etc/nginx/sites-available/80-{{ domain_prefix }}.{{ domain }}"
-        dest: "/etc/nginx/sites-enabled/80-{{ domain_prefix }}.{{ domain }}"
-        state: link
 
     - name: Create custom theme directory
       file:
@@ -73,7 +62,7 @@
         force: yes        
 
     - name: Enable kiwiirc service
-      ansible.builtin.service:
+      service:
         name: kiwiirc
         state: restarted
         enabled: yes
